--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
     </script>
     
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/logo.png" />
   </head>
   <body>
     <div id="root"></div>
